objects/tinderbox__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tinderbox__Last_Viewed__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tinderbox__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TBAccount__c</fullName>
        <description>TB Account ID (Tied to Custom Setting Tinderbox Accounts)</description>
        <inlineHelpText>TB Account ID (Tied to Custom Setting Tinderbox Accounts)</inlineHelpText>
        <label>TBAccount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tinderbox__Views__c</fullName>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tinderbox__tinderboxid__c</fullName>
        <externalId>true</externalId>
        <label>TinderBox ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>TinderBox Proposal</label>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TinderBox Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>